<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itTrangChu"
        android:title="@string/trangchu"
        android:checked="true"
        android:icon="@drawable/trangchu"
       />
    <item
        android:id="@+id/itThucDon"
        android:title="@string/thucdon"
        android:checked="true"
        android:icon="@drawable/logodangnhap"
        />
    <item
        android:id="@+id/itNhanVien"
        android:title="@string/nhanvien"
        android:checked="true"
        android:icon="@drawable/nhanvien"
        />
    <item
        android:id="@+id/itDangXuat"
        android:title="@string/dangxuat"
        android:checked="true"
        android:icon="@drawable/icon_logout"
        />

</menu>