<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_low"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanhtoan"
        android:textAllCaps="true"
        android:textSize="@dimen/size30sp"
        android:textColor="@color/blue"
        android:typeface="serif"
        android:gravity="center_horizontal"
        android:paddingVertical="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size10dp"
        android:background="@color/blue"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenmonan"
            android:layout_weight="0.8"
            android:textSize="@dimen/size20sp"
            android:typeface="serif"
            android:textStyle="bold"
            android:textColor="@color/white"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soluong"
            android:layout_weight="0.99"
            android:textSize="@dimen/size20sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giatien"
            android:layout_weight="1"
            android:textSize="@dimen/size20sp"
            android:typeface="serif"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </LinearLayout>

    <GridView
        android:id="@+id/gvThanhToan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:numColumns="1"
        >

    </GridView>

    <TextView
        android:id="@+id/txtTongTien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tổng tiền"
        android:layout_marginLeft="@dimen/size20sp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/size30sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnThanhToan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/thanhtoan"
            android:layout_margin="@dimen/size10dp"
            />

        <Button
            android:id="@+id/btnThoatThanhToan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:text="@string/thoat" />

    </LinearLayout>

</LinearLayout>