<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_low"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size10dp"
        >

        <TextView
            android:id="@+id/txtTenMonAnThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenmonan"
            android:layout_weight="0.8"
            android:padding="@dimen/size10dp"
            android:typeface="serif"
            android:textSize="@dimen/size20sp"
            android:textColor="@color/blue"
            />

        <TextView
            android:id="@+id/txtSoLuongThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size10dp"
            android:text="@string/soluong"
            android:typeface="serif"
            android:layout_weight="0.99"
            android:textSize="@dimen/size20sp"
            android:textColor="@color/blue"
            />

        <TextView
            android:id="@+id/txtGiaTienThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size10dp"
            android:text="@string/giatien"
            android:typeface="serif"
            android:layout_weight="1"
            android:textSize="@dimen/size20sp"
            android:textColor="@color/blue"
            />

    </LinearLayout>

</LinearLayout>