<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".DangNhapActivity">

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size100dp"
        android:id="@+id/txtDangnhap"
        android:layout_width="match_parent"
        android:textAllCaps="true"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:typeface="serif"
        android:text="@string/dangnhap"
        android:textSize="@dimen/size50dp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/layout_dangnhap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/txtDangnhap">



        <EditText
            android:id="@+id/edtTenDangNhapDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tendangnhap"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:typeface="serif"
            android:drawableTint="@color/blue"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/user"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="10dp"
            android:textSize="@dimen/size20sp"
            android:drawablePadding="15dp"
            android:singleLine="true"
            android:paddingStart="10dp"/>

        <EditText
            android:id="@+id/edtMatKhauDN"
            android:typeface="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhapmatkhau"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:drawableTint="@color/blue"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/password"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="10dp"
            android:textSize="@dimen/size20sp"
            android:inputType="textPassword"
            android:drawablePadding="15dp"
            android:paddingStart="@dimen/size10dp"
            android:singleLine="true"/>


        <Button
            android:id="@+id/btnDongYDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_low"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:typeface="serif"
            android:layout_marginHorizontal="30dp"
            android:text="@string/dongy"/>

        <Button
            android:id="@+id/btnDangKyDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_low"
            android:textColor="@color/blue"
            android:typeface="serif"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/dangky"/>
    </LinearLayout>
</LinearLayout>