<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DangKyActivity"
     android:background="@color/blue"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtDangKy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangky"
        android:textAllCaps="true"
        android:textSize="@dimen/size30sp"
        android:typeface="serif"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/edtTenDangNhapDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tendangnhap"
            android:textColor="@color/blue"
            android:typeface="serif"
            android:textColorHint="@color/blue"
            android:drawableTint="@color/blue"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/user"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="10dp"
            android:textSize="@dimen/size20sp"
            android:drawablePadding="15dp"
            android:singleLine="true"
            android:paddingStart="10dp"/>

    <EditText
        android:id="@+id/edtMatKhauDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhapmatkhau"
        android:textColor="@color/blue"
        android:typeface="serif"
        android:textColorHint="@color/blue"
        android:drawableTint="@color/blue"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/password"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="10dp"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:drawablePadding="15dp"
        android:paddingStart="10dp"
        android:singleLine="true"/>

    <RadioGroup
        android:id="@+id/rgGioiTinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rdNam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nam"
            android:typeface="serif"
            android:textSize="20dp"
            android:checked="true"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rdNu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nữ"
            android:typeface="serif"
            android:textSize="20dp"
            android:textColor="@color/white"/>
    </RadioGroup>

    <Spinner
        android:id="@+id/spQuyen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:layout_marginVertical="10dp" />

    <EditText
        android:id="@+id/edtNgaySinhDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:typeface="serif"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/calender"
        android:drawablePadding="15dp"
        android:hint="@string/ngaysinh"
        android:inputType="date"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        android:drawableTint="@color/blue"
        android:singleLine="true"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edtCMND"
        android:layout_width="match_parent"
        android:typeface="serif"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/idcard"
        android:drawablePadding="15dp"
        android:hint="@string/chungminhandan"
        android:inputType="number"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        android:drawableTint="@color/blue"
        android:textSize="@dimen/size20sp"
        android:singleLine="true"
        android:maxLength="8"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnDongYDK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:backgroundTint="@color/blue_low"
            android:textColor="@color/blue"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/dongy"/>

        <Button
            android:id="@+id/btnThoatDK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_low"
            android:textColor="@color/blue"
            android:typeface="serif"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/thoat"/>

    </LinearLayout>
</LinearLayout>